--- a/python/connect4_robot_j4/pyproject.toml
+++ b/python/connect4_robot_j4/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
 ]
 
 [project.scripts]
-connect4 = "connect4.main:main"
+connect4 = "connect4_robot_j4.main:main"
 
 [tool.setuptools]
 packages = ["connect4_robot_j4"]
