--- a/python/j4_connect4/pyproject.toml
+++ b/python/j4_connect4/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "connect4_robot_j4"
+name = "connect4-robot-j4"
 version = "0.1.0"
 description = "Un Puissance 4 robotisé avec vision par ordinateur, IA et Arduino"
 authors = [
