--- a/python/j4_connect4/pyproject.toml
+++ b/python/j4_connect4/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
   "opencv-python>=4.5",
   "pygame>=2.0",
   "pyserial>=3.5",
-  "numpy>=1.21"
+  "numpy>=1.21",
+  "firebase-admin>=6.9.0"
 ]
 
 [project.scripts]
